test plugin and fix registry error (temp)